kubernetes/apps/base/monz/monz/app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monz
  labels:
    pod-security.kubernetes.io/enforce: privileged
